parser/sample_tests/ours/switch.txt

*** Error line 5.
void small() {
          ^
*** syntax error

